TestCases/SyntaxErrors/differentValuesFields/01/model.m
Base : FeatureA [FeatureB] [FeatureB2] :: _Base ; 